[package]
name = "rsx-translater"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
text-utils = "0.4.3"
panduck-core = "0.1.3"
html_parser = "0.6.2"

[dev-dependencies]

[features]
default = []
