[package]
name = "rsx-convert"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
text-utils = "0.4.3"
# panduck-core = "0.1.3"
html_parser = "0.6.2"
convert_case="0.5.0"

[dev-dependencies]

[features]
default = []
